js/js.translator/testData/incremental/invalidation/breakKlibBinaryCompatibilityWithVariance/lib2/l2.0.kt
class TestClass : TestInterface {
    override fun <T> test(f: () -> GenericInterface<out T>) {
        f()
    }
}
